PET-71 Fix layout on smaller desktops

--- a/src/components/homepage/FeaturedBids/FeaturedBids.module.scss
+++ b/src/components/homepage/FeaturedBids/FeaturedBids.module.scss
@@ -26,6 +26,11 @@
   }
 }
 
+.desktopContainer {
+  grid-gap: 0;
+  grid-template-columns: 40% 60%;
+}
+
 .desktopContent {
   align-self: center;
   justify-self: center;
